slight UI changes

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1665,5 +1665,11 @@ textarea.form-control {
 
 .panel.page {
   border-radius: 5px;
+  padding:15px;
+}
+
+span.form-remove {
+  font-size: 35px;
+  vertical-align: -webkit-baseline-middle;
 }
 
