--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1488,4 +1488,10 @@ textarea.form-control {
 
 .panel.page {
   border-radius: 5px;
+  padding: 15px;
+}
+
+span.form-remove {
+  font-size: 35px;
+  vertical-align: -webkit-baseline-middle;
 }
